fix: update background color of triggers section for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ section#triggers {
     width: 4.8rem;
     border-radius: 9rem;
     border: .1rem solid rgba(0,0,0,0.1);
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgba(100,100,100,0.15);
     box-shadow:
         .3rem .3rem .5rem rgba(0,0,0,0.5),
         .1rem .1rem .5rem inset rgba(255,255,255,0.5);
